# Chatt-App

./: .gitignore  CMakeLists.txt  README.md  dumb.sh  file.txt  gui.sh  make_db.sh  run_client.sh
Db/: notes.txt  schema.sql
Server_chat/: gui.sh
Server_chat/src/: db.cpp  db.h  server.cpp  server.h
bad/: chatroom.cpp  db.cpp  db.h  gui.cpp  gui.h  login.cpp  login.h  menu.cpp  signup.cpp  signup.h  start.cpp  start.h  theme.h
old/: chatroom.cpp  constants.h  db.cpp  db.h  gui.cpp  gui.h  login.cpp  login.h  signup.cpp  start.cpp
src/: chatroom.cpp  chatroom.h  constants.h  db.cpp  db.h  gui.cpp  gui.h  login.cpp  login.h  main.cpp  menu.cpp  menu.h  signup.cpp  signup.h  start.cpp  start.h  theme.h
